# tiny-chess

./: .gitignore  Cargo.toml  Makefile.toml  README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: err.rs  fen.rs  lib.rs  moves.rs  pieces.rs  player.rs  result.rs  square.rs  types.rs  validation.rs
crates/core/src/tests/: fen.rs  king.rs  knight.rs  mod.rs  pawn.rs  square.rs  state.rs  validation.rs
crates/wasm/: Cargo.toml  LICENSE.md  README.md
crates/wasm/src/: lib.rs
src/: err.rs  fen.rs  lib.rs  moves.rs  pieces.rs  square.rs  state.rs  types.rs  validation.rs
src/tests/: bishop.rs  mod.rs  queen.rs  result.rs  rook.rs
src/utils/: char_to_col.rs  coordinates.rs  mod.rs  parse_rank.rs
tests/: coordinates.rs  fen.rs  pawn.rs  square.rs
