[workspace]
resolver = "2"
members = ["crates/core", "crates/wasm"]

[workspace.package]
name = "tiny-chess"
version = "0.3.0"
edition = "2021"
authors = ["Daniel Bilek <danielbilek98@seznam.cz>"]
description = "A minimal chess engine designed to be compiled to WASM and used in Node.js runtime."
license = "MIT"
repository = "https://github.com/danielbilek/tiny-chess"