[package]
name = "tiny-chess-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WebAssembly bindings for tiny-chess-core"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tiny-chess-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"