[package]
name = "wasm-chess"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A minimal chess engine written in Rust and compiled to WebAssembly."
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
tiny-chess-core = { path = "../core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
cfg-if = "1.0"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }