[package]
name = "wasm-chess"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A minimal chess engine written in Rust and compiled to WebAssembly."
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]

# Workspace dependencies
tiny-chess-core = { path = "../core" }

# External dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
cfg-if = "1.0"